Issue #22 fix: Edit link bottom spacing

--- a/css/inner.scss
+++ b/css/inner.scss
@@ -134,7 +134,7 @@
     //margin-top: 15px 0;
   }
   p, ol, ul {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     p {
       display: inline;
     }
